--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 		 <title>My App</title>
 	</head>
 	<body>
-	<h1>Hello Redux</h1>
+	<div id="root"></div>
 	<script src="bundle.js"></script>
 	</body>
  </html>
