--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,11 @@
 	<head>
 		 <meta charset="utf-8">
 		 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		 <title>My App</title>
+		 <title>React-Redux</title>
+		 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 	</head>
 	<body>
-	<div id="root"></div>
-	<script src="bundle.js"></script>
+		<div id="root"></div>
+		<script src="bundle.js"></script>
 	</body>
  </html>
